# git_n_CMakeTrainings

./: .gitignore  Actions&EducateLog.txt  CMakeLists.txt  main.c
MyTest2/: Actions&EducateLog.txt  CMakeLists.txt  README.md  main.c  prjTrainConfigVersion.h.in
MyTest2/inc/: src1.h  src2.h
MyTest2/src/: CMakeLists.txt  src2.c
Test1/: CMakeLists.txt
Test1/src/: CMakeLists.txt  src1.c  src2.c
inc/: src1.h  src2.h
src/: src1.c  src2.c
