
#add_library(src src1.c src2.c)

#project(MegaLibrary)
#set(SOURCES "${MAIN_PROJECTS_PATH}/src/src1.c" "${MAIN_PROJECTS_PATH}/src/src2.c")
#set(HEADERS "${MAIN_PROJECTS_PATH}/inc/src1.h" "${MAIN_PROJECTS_PATH}/inc/src2.h")
#message(auuuuuffff1 ${MAIN_PROJECTS_PATH}\n)
#message(auuuuuffff2 ${HEADERS}\n)
#message(auuff3 ${SOURCES})
#add_library(lib ${SOURCES} ${HEADERS})
#target_include_directories(lib PUBLIC $${CMAKE_CURRENT_SOURCE_DIR})
#message(auuufff6 ${CMAKE_CURRENT_SOURCE_DIR})
##cmake_minimum_required(VERSION 3.0)
##add_library(TestProgram2Lib src1.c src2.c)